added tests, fixed api-docs swagger yaml, better logule management
